--- a/microblog/app/translations/es/LC_MESSAGES/messages.po
+++ b/microblog/app/translations/es/LC_MESSAGES/messages.po
@@ -7,17 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-01-08 21:07-0800\n"
+"POT-Creation-Date: 2020-01-08 21:42-0800\n"
 "PO-Revision-Date: 2020-01-08 21:18-0800\n"
+"Last-Translator: \n"
 "Language: es\n"
 "Language-Team: es <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
-"Last-Translator: \n"
-"X-Generator: Poedit 2.2.4\n"
 
 #: app/__init__.py:21
 msgid "Please log in to access this page."
@@ -53,7 +52,9 @@ msgstr "Ha ocurrido un error inesperado."
 
 #: app/templates/500.html:5
 msgid "The admin has been notified. Sorry for the inconvenience."
-msgstr "El administrador ha sido notificado. Lo siento por los inconvenientes ocasionados."
+msgstr ""
+"El administrador ha sido notificado. Lo siento por los inconvenientes "
+"ocasionados."
 
 #: app/templates/_post.html:5
 msgid "Post Author Avatar"
@@ -162,3 +163,4 @@ msgstr "Seguir"
 #: app/templates/user.html:23
 msgid "Unfollow"
 msgstr "Dejar de seguir"
+
